do not assume we have a backend when setting an output device

random suggestion du jour: since debianesque distros are the only ones
allowing running without a backend (to my knowledge anyway), this fix
should be adopted there at the earliest convenient time.

this change prevents a crash when run without a backend and getting device
changes as the Iface handling later on would directly call the cast output
without checking its validity. since the cast would always be null when
there is no backend we can just as well save time and return early.

note: this is ultimately fallout from too excessive init() setup
when there is no backend, so the ideal fix would have been to abort the
setup there. given the limited testing exposure of alsa+phononserver+phonon
this less invasive fix is deemed more suitable for the existing code base
though.
(this lineup only happens with phononserver in the picture and that
 bugger has already been killed off for plasma5)

BUG: 341296
CCMAIL: pkg-kde-talk@lists.alioth.debian.org